# auto_analyst

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
src/: bs_pl.py  figure.py  log.py  main.py  news.py  settings.py
